--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -16,3 +16,10 @@
         }
     }
 }
+
+.add-button {
+    width: fit-content;
+    height: fit-content;
+    align-self: center;
+    margin-left: 10px;
+}
