--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -35,3 +35,10 @@ main {
     width: 100%;
     max-width: 500px;
 }
+
+thead {
+    a {
+        color: black;
+        text-decoration: none;
+    }
+}
